# CLPipeline

./: .gitignore  CMakeLists.txt  README.md
CLPipeline.Core/: CMakeLists.txt
